[practice 2nd] added new texts

--- a/summer_practice_2nd/presentation/presentation.tex
+++ b/summer_practice_2nd/presentation/presentation.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt,pdf,hyperref={unicode}]{beamer}
 
 \usepackage{lmodern}
+\usepackage{amsmath}
+\usepackage{dsfont}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 
@@ -20,11 +22,13 @@
 \author[Шаров А.В.]{
   Шаров Александр Вадимович
 }
-\institute[КОД] {
-«Прикладная информатика и математика»
+\institute[01.03.02] {
+«01.03.02 Прикладная математика и информатика»
+\\
+Научный руководитель А.К. Смирнов
 }
 
-\date{} 
+\date{7 Cентября 2016 г.} 
 % \logo{\includegraphics[height=5mm]{images/logo.png}\vspace{-7pt}}
 
 \begin{document}
@@ -39,22 +43,74 @@
 \tableofcontents
 \end{frame} 
 
-\section{Постановка задачи}
+\section{ВВЕДЕНИЕ}
 \begin{frame}
 
-Целью работы является рассмотрение понятия квадратичных форм, связанных с этим определёний, а так же изучениям их  свойств. 
-
-\end{frame} 
-
-\section{Историческая справка}
-\begin{frame}
+\begin{block}{Историческая справка}
 
 В 628-м году индийский математик Брахмагупта написал \\ <<Brahmasphutasiddhanta>>, которое включало в себя уравнение вида $$x^2-ny^2=c.$$ Сейчас это уравнение называется уравнением Пелля и записывается в виде $$x^2-ny^2=1.$$ В Европе проблему решения этого уравнения изучали такие ученые как Эйлер, Лагранж, Браункер и многие другие. В частности, Лагранж в своих трудах значительно расширил теорию квадратичных форм изучая кривые второго порядка. В 1801 году Гаусс опубликовал <<Disquisitiones Arithmeticae>>, большая часть которого была посвещена  полной теории бинарных квадратичных форм над целыми числами. С тех пор эта концепция была обобщена, и связана с квадратичными числовыми полями, модулярным группами и другими областями математики.
 
+\end{block}
+
+%\begin{block}{В данной курсовой работе}
+
+%моей задачей было изучение квадратичных форм, связанн	ых с этим определёний. Нужно было изучить основные результаты и понять, в каких именно областях можно применять квадратичные формы. 
+
+%\end{block}
+
 \end{frame} 
 
-\section{Основные результаты}
+\section{Общий вид квадратичной формы}
 \begin{frame}
+
+\begin{block}{Определение}
+Квадратичной формой над множеством $\mathds{a}$ называют однородный полином второй степени с коэффициентами из $\mathds{a}$;
+\\
+Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных будет иметь вид:
+\\
+$$f(x_1,...x_n)=\sum_{1 \le j \le k \le n}{f_{jk}x_jx_k} = \sum_{j=1}^{n}{}\sum_{k=1}^{n}{a_{jk}x_{j}x_{k}} \;,$$
+\\ где $a_{jk} = f_{jk}$ некоторые числа, называемые коэффициентами.x
+\end{block}
+
+\end{frame}
+
+
+\section{Основные свойства квадратичных форм}
+
+\begin{frame}{Основные свойства квадратичных форм}
+
+\begin{block}
+
+\begin{itemize}
+\item{Для любой квадратичной формы $А$ существует единственная симметричная билинейная форма B, такая, что $A(x) = B(x, x)$. Билинейную форму B называют полярной к $A$.}
+\item{Если матрица квадратичной формы имеет полный ранг, то квадратичную форму называют невырожденной, иначе - вырожденной.}
+\item{Квадратичная форма A(x,x) называется положительно (отрицательно) определённой, если для любого $x \ne 0$ $A(x,x)> 0$ $(A(x,x)<0)$. Положительно определённые и отрицательно определённые формы называются знако-определёнными.}
+
+\end{itemize}
+
+\end{block}
+
+\end{frame}
+
+\begin{frame}{Основные свойства квадратичных форм}
+
+\begin{block}
+
+\begin{itemize}
+
+\item{Квадратичная форма $A(x,x)$ называется знакопеременной, если она принимает как положительные, так и отрицательные значения.}
+\item{Квадратичная форма $f(x_1,x_2,...,x_n)$ называется канонической, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\sum_{i=1}^{r}{a_{ii}x_i^2} (r \le n)$$}
+\item{Каноническая квадратичная форма называется нормальной (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. }
+
+\end{itemize}
+
+\end{block}
+
+\end{frame}
+
+\section{Основные результаты}
+\begin{frame}{Преобразование квадратичной формы при линейном однородном
+преобразовании переменных}
 
 \begin{block}{Теорема 1}
 Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $A$ линейным однородным преобразованием $X = BY$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
@@ -70,7 +126,8 @@
 
 \end{frame} 
 
-\begin{frame}
+\begin{frame}{Ортогональное преобразование квадратичной формы к
+каноническому виду}
 
 \begin{block}{Теорема 2 (Лагранжа).} 
 Всякая квадратичная форма при помощи невырожденного линейного преобразования переменных может быть приведена к каноническому виду. 
@@ -85,7 +142,7 @@ $$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
 
 \end{frame} 
 
-\begin{frame}
+\begin{frame}{Закон инерции квадратичных форм}
 
 \begin{block}{Теорема 4} 
 Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
@@ -97,7 +154,7 @@ $$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
 
 \end{frame} 
 
-\begin{frame}
+\begin{frame}{Знакоопределенные квадратичные формы}
 
 \begin{block}{Теорема 6} 
 Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$. 
@@ -113,9 +170,18 @@ $$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
 
 \end{frame} 
 
-\section{Заключение}
-\begin{frame}
--
+\section{ЗАКЛЮЧЕНИЕ}
+\begin{frame}{Заключение}
+\begin{block}
+
+\begin{itemize}
+
+\item{Дано определение квадратичной формы, приведены её основные свойства}
+\item{Рассмотрены основные теоремы в теории квадратичных форм.}
+
+\end{itemize}
+
+\end{block}
 \end{frame} 
 
 \end{document}
