[practice 2nd] rewrited conclusion

--- a/summer_practice_2nd/presentation/presentation.tex
+++ b/summer_practice_2nd/presentation/presentation.tex
@@ -176,8 +176,10 @@ $$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
 
 \begin{itemize}
 
-\item{Дано определение квадратичной формы, приведены её основные свойства}
-\item{Рассмотрены основные теоремы в теории квадратичных форм.}
+\item{Подробно рассмотрены основные вопросы и положения теории квадратичный форм.}
+\item{Изучена специальная литература, включающая научные статьи по теории квадратичных форм, учебники по линейной алгебре.}
+\item{Рассмотрено практическое применение квадратичных форм в приложениях.}
+
 
 \end{itemize}
 
