[Poincare_method] rewrited main method, example

--- a/Poincare_method/main.tex
+++ b/Poincare_method/main.tex
@@ -9,88 +9,171 @@
 
 \begin{document}
 
-%\tableofcontents
-
-1 Название метода
-2 пошаговый алгоритм действия (не масштабно, выявить суть в 4 шагах или типа того)
-3 формулировка задачи (преаисываешь условие)
-4 применение метода (выкладки при решеинии)
 
 
-$u+u+\epsilon u^3=0$
+\bigskip\bigskip\bigskip
 
 
-методика линдштедта-пуанкаре
+\begin{center}
+\textbf{методика линдштедта-пуанкаре}
+\medskip
+\end{center}
+
+
+\tableofcontents
+
+\intro
+блаблабла
+
+\section{Уравнение Дюффинга}
+
+Свободные колебания консервативных систем с одной степенью свободы во многих случаях описываются уравнением:
+
+$$ \frac{d^2x^*}{dt^{*2}}+f(x^*)=0, \eqno(1)$$ 
+
+где $f$ - нелинейная функция от $x^*$, $\frac{d^2x^*}{dt^{*2}}$ - определённое ускорение системы, а $f(x^*)$ - нелинейная восстанавливающая сила.
+
+Координата $x^*=x^*_0$ определяет положение равновесия системы; Отсюда ясно, что $f(x^*_0)=0$.
+
+Предположим, что $f$ является аналитической функцией в в точке $x^*=x^*_0$, тогда в окрестности этой точки её можно разложить в ряд Тейлора:
+
+$f(x^*)=k_1(x^*-x_0)+k_2(x^*-x_0)^2+\ldots$ , где $k_n=\frac{1}{n!}\frac{d^nf}{dx^{*n}}x_0^*$.
+
+Таким образом (1) перепишется в виде:
+
+$$ \frac{d^2x^*}{dt^{*2}}+k_1(x^*-x_0)+k_2(x^*-x_0)^2+\ldots=0 \eqno(2)$$
+
+Уравнение (2) описывает движение данной системы вблизи положения равновесия. Вводя преобразование $u^*=x^*-x^*_0$ из уравнения (2) получим:
+
+$$ \frac{d^2x^*}{dt^{*2}}+k_1u^*+k_2u^{*2}+\ldots=0.$$
+
+Это общий вид уравнения описывающего свободные колебания консервативных систем с одной степенью свободы. Нам интересен частный вид этого уравнения:
+
+$$ \frac{d^2x^*}{dt^{*2}}+k_1u^*+k_3u^{*3}=0\;, \eqno(3)$$
+
+где $k_1 > 0$, а $k_3$ любое.
+
+Уравнение (3) и называется уравнением Дюффинга. 
+
+В заключение, приведём его к безразмерному виду. Выберем характерные масштабы задачи - линейный $U^*$ и временной $T^*$ - и положим:
+
+$$ u=\frac{u^*}{U^*}, \; \; \; t=\frac{t^*}{T^*}.$$
+
+По правилам дифференциирования:
+
+$$ \frac{d}{dt^*}=\frac{d}{dt}\frac{dt}{dt^*}=\frac{1}{T^*}\frac{d}{dt} $$
+
+$$ \frac{d^2}{dt^{*2}}=\frac{1}{T^{*2}}\frac{d^2}{dt^2} $$
+
+При этом уравнение (3) преобразуется к виду:
+
+$$\ddot{u}+k_1T^{*2}u+k_3T^{*2}U^{*2}u^3=0 \eqno(4)$$
+
+выберем $T^*$ такое, что $k_1T^{*2}=1$ и положим $\epsilon=k_3T^{*2}U^{*2}=\frac{k_3U^{*2}}{k_1}$.
+
+Теперь перепишем (4):
+
+$$\ddot{u}+u+\epsilon u^3=0\;,$$
+
+где $\epsilon$ - безразмерная величина характеризующая степень нелинейности системы.
+
+Именно на примере уравнения (4) мы и будем изучать метод Линдштедта-Пуанкаре.
+\newpage
+
 
 \section{Описание метода}
 
-Пусть у нас есть уравнение Дюффинга вида $\frac{d^2x^*}{(dt^*)^2}+f(x^*)=0$, где $f$ - нелинейная функция от $x^*$, $\frac{d^2x^*}{(dt^*)^2}$ - определённое ускорение системы, $f(x^*)$ - нелинейная восстанавливающая сила.
-
- Вместо переменной t вводится новая переменная$t=\tau(1+\epsilon\omega_1+\epsilon^2\omega_2+\ldots)$, где $\omega$ есть некоторая постоянная величина, определяемая только значениями параметра $\epsilon$ 
-
-Мы будем использовать специальный вид уравнения Дюффинга:
-$$\frac{d^2u^*}{(dt^*)^2}+k_1u^*+k_3(u^*)^3=0 $$
-
-где $k_1 0 $, а $k_3$ любое.
-
-Приведём наше уравнение к безразмерному виду. С этой целью выберем некоторые характерные масштабы задачи — линейный $U*$ и временной $Т*$ — и положим
-$$ u = \frac{u^*}{U}, \; \; \; t = \frac{t^*}{T} $$
+Будем искать решения автономного уравнения $\ddot{x}+\omega^2x=\epsilon f(x,\dot{x})$.
 
 
-Выразив дифференциалы \frac{d}{dt^*} \frac{d^2}{(dt^*)^2} через новые переменные исходное уравнение перепишется в виде
+\begin{enumerate} 
 
-u..+k_1(T^*)^2u+k_3(T^*)^2(U^*)^2u^3=0
+\item 
+Введём замену $\tau=\omega t$ и посчитаем новые дифференциалы: 
+$$\frac{d}{dt}=\omega\frac{d}{dt}$$
+$$\frac{d^2}{dt^2}=\omega^2\frac{d^2}{dt^2}$$
+Таким образом в наше уравнение теперь входит переменная $\omega$. Ищем $x,\omega$ в виде разложений по степенням $\epsilon$. Положим: 
+$$x=x_0(t)+\epsilon u_1(t)+\ldots$$
+$$\omega=1+\epsilon \omega_1+\ldots$$
 
-блаблабла
+\item
+Подставляем $x,\omega$ в исходное уравнение, приравнивая кооэфициенты при $\epsilon_0, \epsilon_1$ к нулю.
 
-и тогда уравнение перепишется как $$u..+u+\epsilon u^3=0$$.
+\item
+Избавляемся от секулярных членов в решенях промежуточных уравнений с помощью подбора парамера $\omega_1, \omega_2, \ldots$ так, чтобы наш секулярный член при соответсвующем члене был равен нулю.
 
-блаблабла
+\item
+Подставим промежуточные решения в разложения $x,\omega$ и получим решения.
 
-Начальные условия $u(0)=x_0, \; \; \; u.(0)=x._0$.
+\end{enumerate}
 
-блаблабла
-
-\newpage
-
-Для того чтобы выявить зависимость частоты от степени нелинейности системы, введем частоты w непосредственно в дифференциальное уравнение (). 
-Сделаем замену $\tau=\omega t$, где w есть некоторая постоянная величина, определяемая только значениями параметра е.
-
-Далее выразим дифференциалы через новую переменную и получим
-$\frac{d}{dt} = \omega \frac{d}{d\tau} , \; \frac{d^2}{dt^2} = \omega^2 \frac{d^2}{d\tau^2}$ и таким образом исходное уравнение (1) перепишется в виде : $\omega^2u^{''}+u+\epsilon u^3=0$, где производная берётся по $\tau$
-
-Чтобы определить значения переменных $u$ и $\omega$.
-
-Будем искать их в виде разложений по степеням $\epsilon$, т. е. положим
-$ u = ....$ , $\omega=1+\epsilon \omega_1+\ldots$
+\section{Формулировка задачи}
 
 
-При этом первый член разложения для со представляет собой 
+\section{Применение метода}
+
+Пусть у нас есть безразмерное уравнение Дюффинга: $$\ddot{u}+u+\epsilon u^3=0. \eqno(1)$$
+
+Для начала сделаем замену $\tau=\omega t$, где $\omega$ есть некоторая постоянная величина, определяемая только значениями параметра $\epsilon$.
+
+Далее выразим дифференциалы через новую переменную и получим:
+$$\frac{d}{dt} = \omega \frac{d}{d\tau} , \;\;\; \frac{d^2}{dt^2} = \omega^2 \frac{d^2}{d\tau^2}$$ 
+и таким образом исходное уравнение (1) перепишется в виде : 
+$$\omega^2u^{''}+u+\epsilon u^3=0, \eqno(2)$$ 
+где производная берётся по $\tau$.
+
+Чтобы определить значения переменных $u$ и $\omega$ будем искать их в виде разложений по степеням $\epsilon$, т. е. положим
+$$ u = u_0(\tau)+\epsilon u_1(\tau)+\cdots \;, \eqno(3)$$
+$$\omega=1+\epsilon \omega_1+\ldots \;. \eqno(4)$$
+
+При этом первый член разложения для $\omega$ представляет собой 
 частоту линейной системы, которая в нашем случае равна единице.
-Далее, исходя из требования, что разложение для функции и
-должно быть равномерным при всех т, в процессе вычислений
-можно определить все последующие поправки к частоте линейной
-системы.
-:
-Так, подстановка (4.68) и (4.69) в (4.67). дает после всех преобразований:
 
-$$u_0^{''}+u_0+\epsilon(u_1^{''}+u_1+u_0^3+2\omega_1 u_0^{''}+\ldots=0$$.
+Подставим (3) и (4) в (2) и получим:
 
-Приравнивая нулю коэффициенты при $\epsilon^{0}$ и $\epsilon^{1}$ получаем
+$$(1+\epsilon \omega_1+\ldots)^2(u_0(\tau)+\epsilon u_1(\tau)+\cdots)^{''}+(u_0(\tau)+\epsilon u_1(\tau)+\cdots)+\epsilon (u_0(\tau)+\epsilon u_1(\tau)+\cdots)^3=0.$$
 
-$u_0^{''}+u_=0, u_1^{''}+u_1=-u_0^3-2\omega_1u_0^{''}$
+Отсюда:
 
-Общее решение первого даётся формулой $u_0=\alpha cos(\tau+\beta)$, где $\alpha$, $\beta$ некоторые произвольные постоянные.
+$$u_0^{''}+u_0+\epsilon (u_1^{''}+u_1+u_0^3+2\omega_1u_0^{''})+\ldots=0$$
 
+Приравняем кооэфициенты при $\epsilon_0$ и $\epsilon_1$ к нулю:
 
+$$u_0^{''}+u_0=0 \eqno(5)$$
+$$u_1^{''}+u_1=-u_0^3-2\omega_1u_0^{''} \eqno(6) $$
 
+Общее решение (5) : $u_0=\alpha\cos{(\tau+\beta)}$, где $\alpha$, $\beta$ некоторые произвольные постоянные.
 
+Теперь перепишем (6) в виде: $u_1^{''}+u_1=-\alpha^3\cos^3{(\tau+\beta)}+2\omega_1\alpha\cos{(\tau+\beta)}$.
 
-%положим $u=\sum\limits_{n=0}^\infty \epsilon^n u_n.$
+Отсюда следует: 
+$$u_1^{''}+u_1=(2\omega_1\alpha-\frac{3}{4}\alpha^3)\cos{(\tau+\beta)}-\frac{1}{4}\alpha^3\cos{(3\tau+3\beta)}. \eqno(7)$$
 
-%приравняв коэффициенты при равных степенях $\epsilon$, получим уравнения %для последовательного определения $u_m$. Решения для $u_m$ не содержат %вековых членов только при опреленных значениях $\omega_m$.
+Видно, что уравнение (7) содержит секулярный член, а следовательно решение неравномерно, а мы не должны допустить секулярных членов в $u_1, u_2, \cdots$.
+В данном случае мы можем подобрать параметр $\omega_1$ таким образом, чтобы исключить соотвествеющий секулярный член. С этой целью положим кооэфициент при секулярном члене равным нулю, т.е. примем:
+$$2\omega_1\alpha-\frac{3}{4}\alpha^3=0; \eqno(8)$$
 
+Теперь, учитывая (8) уравнение (7) примет вид: 
+$$u_1=\frac{1}{32}\alpha^3\cos{(3\tau+3\beta)}. \eqno(9)$$
 
+Если исключить тривиальный случай $\alpha=0$, то условие (8) удоволетворяется при 
+$$\omega_1=\frac{3}{8}\alpha^2 \eqno(10)$$
 
+Для получения уравнения (8) позволяющего исключить секулярный член нет необходимости строить в явном виде соответсвенное частное разложение(как показано выше).
+Вместо этого мы можем исходя из вида неоднородности в правой части (7), которая собственно и определения характер функции $u_1$, просто положить равной нулю коэфициент при $\cos{(\tau+\beta)}$, поскольку именно это слагаемое ответственно за появление секулярного член при $u_1$.
+
+Подставим (5) и (9) в (3) и получим:
+
+$$u=\alpha\cos{(\tau+\beta)}+\frac{1}{32}\epsilon\alpha^2\cos{(3\tau+3\beta})+\ldots \eqno(11)$$
+
+Подставим $\omega_1$ из (10) в (4) получим:
+
+$$\omega=1+\frac{3}{8}\epsilon\alpha^2+\ldots \eqno(12)$$
+
+Так как $\tau=t\omega$, то (5) можно переписать  в виде:
+
+$$u=\alpha\cos{[(1+\frac{3}{8}\epsilon\alpha^2)t+\beta]}+\frac{1}{32}\epsilon\alpha^2\cos{3[(1+\frac{3}{8}\epsilon\alpha^2)t+3\beta]}+\ldots \eqno(13)$$
+
+Таким образом (13) будет равномерным решением 1го порядка, т.е. секулярные члены в нём отсутсвуют, а поправка (член $~\epsilon$) оказывается малой по сравнению с главным членом разложения.
 
 \end{document}
