[Poincare_method] rewrited main method, example

--- a/Poincare_method/main.tex
+++ b/Poincare_method/main.tex
@@ -23,7 +23,16 @@
 \tableofcontents
 
 \intro
-блаблабла
+
+Нарушение пригодности прямого разложения связано с тем, что с его помощью
+невозможно описать зависимость частоты системы от степени
+ее нелинейности. Таким образом, можно заранее утверждать, что
+любое разложение, не учитывающее эту зависимость, окажется
+несостоятельным. В настоящее время, однако, разработаны целые
+ряды методов, позволяющих получать для подобного рода задач
+равномерно пригодные разложения.
+ 
+Тут будет рассмотрен метод Линдштедта—Пуанкаре, суть которого заклю­чается во введении новой переменной для избежания появления секулярных членов.
 
 \section{Уравнение Дюффинга}
 
@@ -83,6 +92,15 @@ $$\ddot{u}+u+\epsilon u^3=0\;,$$
 
 \section{Описание метода}
 
+Решение нашей задачи является функцией независимой 
+переменной $t$ и параметра $\epsilon$, а частота системы $\omega$ является
+функцией параметра $\epsilon$ (т. е. степени нелинейности системы).
+
+Это обстоятельство используется для построения равномерно пригодного решения с помощью разложения функций $u$ и $\omega$ в ряд по степеням параметра $\epsilon$ — в этом состоит так называемая методика Линдштедта—Пуанкаре. Формально алгоритм описан ниже.
+
+
+
+
 Будем искать решения автономного уравнения $\ddot{x}+\omega^2x=\epsilon f(x,\dot{x})$.
 
 
@@ -106,9 +124,6 @@ $$\omega=1+\epsilon \omega_1+\ldots$$
 Подставим промежуточные решения в разложения $x,\omega$ и получим решения.
 
 \end{enumerate}
-
-\section{Формулировка задачи}
-
 
 \section{Применение метода}
 
