[Poincare_method] rewrited some sections

--- a/Poincare_method/main.tex
+++ b/Poincare_method/main.tex
@@ -9,20 +9,38 @@
 
 \begin{document}
 
-
-
 \bigskip\bigskip\bigskip
 
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
+
+\hfill
 
 \begin{center}
-\textbf{методика линдштедта-пуанкаре}
+\textbf{\Largeметодика Линдштедта-Пуанкаре}
+\\
+Шаров А.В.
 \medskip
 \end{center}
-
 
 \tableofcontents
 
 \intro
+
+Метод прямымого разложения по параметру даёт приближенное решение задачи $\ddot{u}+u+\epsilon u^3=0\;,$ при малых, но конечных $\epsilon$, однако это разложение не будет равномерно пригодным для больших значений $t$.
 
 Нарушение пригодности прямого разложения связано с тем, что с его помощью
 невозможно описать зависимость частоты системы от степени
@@ -31,78 +49,61 @@
 несостоятельным. В настоящее время, однако, разработаны целые
 ряды методов, позволяющих получать для подобного рода задач
 равномерно пригодные разложения.
- 
-Тут будет рассмотрен метод Линдштедта—Пуанкаре, суть которого заклю­чается во введении новой переменной для избежания появления секулярных членов.
+
+Решение нашей задачи является функцией независимой 
+переменной $t$ и параметра $\epsilon$, а частота системы $\omega$ (её мы рассмотрим позже) является
+функцией параметра $\epsilon$ (т. е. степени нелинейности системы).
+
+Это обстоятельство используется для построения равномерно пригодного решения с помощью разложения функций $u$ и $\omega$ в ряд по степеням параметра $\epsilon$ — в этом состоит так называемая методика Линдштедта—Пуанкаре. 
 
 \section{Уравнение Дюффинга}
 
 Свободные колебания консервативных систем с одной степенью свободы во многих случаях описываются уравнением:
 
 $$ \frac{d^2x^*}{dt^{*2}}+f(x^*)=0, \eqno(1)$$ 
-
-где $f$ - нелинейная функция от $x^*$, $\frac{d^2x^*}{dt^{*2}}$ - определённое ускорение системы, а $f(x^*)$ - нелинейная восстанавливающая сила.
-
+где $f$ - некоторая нелинейная функция от $x^*$; при этом член $\frac{d^2x^*}{dt^{*2}}$ определяет ускорение системы, а $f(x^*)$ - нелинейную восстанавливающую силу.
 Координата $x^*=x^*_0$ определяет положение равновесия системы; Отсюда ясно, что $f(x^*_0)=0$.
+Предположим, что $f$ является аналитической функцией в в точке $x^*=x^*_0$; тогда в окрестности этой точки её можно разложить в ряд Тейлора:
 
-Предположим, что $f$ является аналитической функцией в в точке $x^*=x^*_0$, тогда в окрестности этой точки её можно разложить в ряд Тейлора:
-
-$f(x^*)=k_1(x^*-x_0)+k_2(x^*-x_0)^2+\ldots$ , где $k_n=\frac{1}{n!}\frac{d^nf}{dx^{*n}}x_0^*$.
-
-Таким образом (1) перепишется в виде:
+$$f(x^*)=k_1(x^*-x_0)+k_2(x^*-x_0)^2+\ldots \;,$$
+где $$k_n=\frac{1}{n!}\frac{d^nf}{dx^{*n}}x_0^*.$$
+Таким образом, уравнение (1) можно переписать в виде:
 
 $$ \frac{d^2x^*}{dt^{*2}}+k_1(x^*-x_0)+k_2(x^*-x_0)^2+\ldots=0 \eqno(2)$$
-
-Уравнение (2) описывает движение данной системы вблизи положения равновесия. Вводя преобразование $u^*=x^*-x^*_0$ из уравнения (2) получим:
+Уравнение (2) описывает движение данной системы вблизи положения равновесия. Вводя преобразование $u^*=x^*-x^*_0\;$ из уравнения (2) получим:
 
 $$ \frac{d^2x^*}{dt^{*2}}+k_1u^*+k_2u^{*2}+\ldots=0.$$
-
 Это общий вид уравнения описывающего свободные колебания консервативных систем с одной степенью свободы. Нам интересен частный вид этого уравнения:
 
 $$ \frac{d^2x^*}{dt^{*2}}+k_1u^*+k_3u^{*3}=0\;, \eqno(3)$$
-
-где $k_1 > 0$, а $k_3$ любое.
-
+где $k_1 > 0$, а $k_3$ может быть любым.
 Уравнение (3) и называется уравнением Дюффинга. 
 
-В заключение, приведём его к безразмерному виду. Выберем характерные масштабы задачи - линейный $U^*$ и временной $T^*$ - и положим:
+В заключение, приведём уравнение Дюффинга к безразмерному виду. Выберем характерные масштабы задачи - линейный $U^*$ и временной $T^*$ - и положим:
 
 $$ u=\frac{u^*}{U^*}, \; \; \; t=\frac{t^*}{T^*}.$$
-
 По правилам дифференциирования:
 
 $$ \frac{d}{dt^*}=\frac{d}{dt}\frac{dt}{dt^*}=\frac{1}{T^*}\frac{d}{dt} $$
 
 $$ \frac{d^2}{dt^{*2}}=\frac{1}{T^{*2}}\frac{d^2}{dt^2} $$
-
 При этом уравнение (3) преобразуется к виду:
 
 $$\ddot{u}+k_1T^{*2}u+k_3T^{*2}U^{*2}u^3=0 \eqno(4)$$
-
 выберем $T^*$ такое, что $k_1T^{*2}=1$ и положим $\epsilon=k_3T^{*2}U^{*2}=\frac{k_3U^{*2}}{k_1}$.
-
-Теперь перепишем (4):
+Теперь перепишем уравнение (4):
 
 $$\ddot{u}+u+\epsilon u^3=0\;,$$
-
 где $\epsilon$ - безразмерная величина характеризующая степень нелинейности системы.
-
 Именно на примере уравнения (4) мы и будем изучать метод Линдштедта-Пуанкаре.
 \newpage
 
 
 \section{Описание метода}
 
-Решение нашей задачи является функцией независимой 
-переменной $t$ и параметра $\epsilon$, а частота системы $\omega$ является
-функцией параметра $\epsilon$ (т. е. степени нелинейности системы).
-
-Это обстоятельство используется для построения равномерно пригодного решения с помощью разложения функций $u$ и $\omega$ в ряд по степеням параметра $\epsilon$ — в этом состоит так называемая методика Линдштедта—Пуанкаре. Формально алгоритм описан ниже.
-
-
 
 
 Будем искать решения автономного уравнения $\ddot{x}+\omega^2x=\epsilon f(x,\dot{x})$.
-
 
 \begin{enumerate} 
 
@@ -115,80 +116,71 @@ $$x=x_0(t)+\epsilon u_1(t)+\ldots$$
 $$\omega=1+\epsilon \omega_1+\ldots$$
 
 \item
-Подставляем $x,\omega$ в исходное уравнение, приравнивая кооэфициенты при $\epsilon_0, \epsilon_1$ к нулю.
+Подставляем $x,\omega$ в исходное уравнение, приравнивая кооэфициенты при $\epsilon_0, \epsilon_1$ к нулю и решаем получившиеся уравнения.
 
 \item
-Избавляемся от секулярных членов в решенях промежуточных уравнений с помощью подбора парамера $\omega_1, \omega_2, \ldots$ так, чтобы наш секулярный член при соответсвующем члене был равен нулю.
+Избавляемся от секулярных членов в решенях промежуточных уравнений с помощью подбора парамеров $\omega_1, \omega_2, \ldots$ так, чтобы наш секулярный член при соответсвующем члене был равен нулю.
+
+Альтернативный способ: мы можем избавиться от секулярных членов исходя из вида неоднородности в правой части получившегося уравнения.
 
 \item
-Подставим промежуточные решения в разложения $x,\omega$ и получим решения.
+Подставим промежуточные решения в наши исходные разложения $x,\omega$ и получим решения.
 
 \end{enumerate}
 
 \section{Применение метода}
 
 Пусть у нас есть безразмерное уравнение Дюффинга: $$\ddot{u}+u+\epsilon u^3=0. \eqno(1)$$
-
 Для начала сделаем замену $\tau=\omega t$, где $\omega$ есть некоторая постоянная величина, определяемая только значениями параметра $\epsilon$.
-
-Далее выразим дифференциалы через новую переменную и получим:
+\\
+Переходя от аргумента $t$ к овой переменной $\tau$ и используя правило дифференциирования сложной функции, получим:
 $$\frac{d}{dt} = \omega \frac{d}{d\tau} , \;\;\; \frac{d^2}{dt^2} = \omega^2 \frac{d^2}{d\tau^2}$$ 
 и таким образом исходное уравнение (1) перепишется в виде : 
 $$\omega^2u^{''}+u+\epsilon u^3=0, \eqno(2)$$ 
-где производная берётся по $\tau$.
-
+где штрихи означают дифференцирование по переменной $\tau$.
+\\
 Чтобы определить значения переменных $u$ и $\omega$ будем искать их в виде разложений по степеням $\epsilon$, т. е. положим
 $$ u = u_0(\tau)+\epsilon u_1(\tau)+\cdots \;, \eqno(3)$$
 $$\omega=1+\epsilon \omega_1+\ldots \;. \eqno(4)$$
-
 При этом первый член разложения для $\omega$ представляет собой 
 частоту линейной системы, которая в нашем случае равна единице.
-
+\\
 Подставим (3) и (4) в (2) и получим:
-
 $$(1+\epsilon \omega_1+\ldots)^2(u_0(\tau)+\epsilon u_1(\tau)+\cdots)^{''}+(u_0(\tau)+\epsilon u_1(\tau)+\cdots)+\epsilon (u_0(\tau)+\epsilon u_1(\tau)+\cdots)^3=0.$$
-
 Отсюда:
-
 $$u_0^{''}+u_0+\epsilon (u_1^{''}+u_1+u_0^3+2\omega_1u_0^{''})+\ldots=0$$
-
 Приравняем кооэфициенты при $\epsilon_0$ и $\epsilon_1$ к нулю:
-
 $$u_0^{''}+u_0=0 \eqno(5)$$
 $$u_1^{''}+u_1=-u_0^3-2\omega_1u_0^{''} \eqno(6) $$
-
-Общее решение (5) : $u_0=\alpha\cos{(\tau+\beta)}$, где $\alpha$, $\beta$ некоторые произвольные постоянные.
-
-Теперь перепишем (6) в виде: $u_1^{''}+u_1=-\alpha^3\cos^3{(\tau+\beta)}+2\omega_1\alpha\cos{(\tau+\beta)}$.
-
+Общее решение (5) даётся формулой: 
+$$u_0=\alpha\cos{(\tau+\beta)} \;,$$
+где $\alpha$, $\beta$ некоторые произвольные постоянные.
+\\
+Теперь перепишем (6) в виде: 
+$$u_1^{''}+u_1=-\alpha^3\cos^3{(\tau+\beta)}+2\omega_1\alpha\cos{(\tau+\beta)}.$$
 Отсюда следует: 
 $$u_1^{''}+u_1=(2\omega_1\alpha-\frac{3}{4}\alpha^3)\cos{(\tau+\beta)}-\frac{1}{4}\alpha^3\cos{(3\tau+3\beta)}. \eqno(7)$$
-
-Видно, что уравнение (7) содержит секулярный член, а следовательно решение неравномерно, а мы не должны допустить секулярных членов в $u_1, u_2, \cdots$.
+Частное решение уравнения (7) можно представить в виде:
+$$u_1=\frac{1}{2}(2\omega_1\alpha-\frac{3}{4}\alpha^3)\tau\sin{(\tau+\beta)}+\frac{1}{32}\alpha^3\cos{(3\tau+3\beta)}$$
+Видно, что данное решение для уравнение (7) содержит секулярный член, а следовательно решение неравномерно, а мы не должны допустить секулярных членов в выражениях для $u_1, u_2, \cdots$ и тд.
+\\
 В данном случае мы можем подобрать параметр $\omega_1$ таким образом, чтобы исключить соотвествеющий секулярный член. С этой целью положим кооэфициент при секулярном члене равным нулю, т.е. примем:
 $$2\omega_1\alpha-\frac{3}{4}\alpha^3=0; \eqno(8)$$
-
 Теперь, учитывая (8) уравнение (7) примет вид: 
 $$u_1=\frac{1}{32}\alpha^3\cos{(3\tau+3\beta)}. \eqno(9)$$
-
 Если исключить тривиальный случай $\alpha=0$, то условие (8) удоволетворяется при 
-$$\omega_1=\frac{3}{8}\alpha^2 \eqno(10)$$
+$$\omega_1=\frac{3}{8}\alpha^2. \eqno(10)$$
 
-Для получения уравнения (8) позволяющего исключить секулярный член нет необходимости строить в явном виде соответсвенное частное разложение(как показано выше).
-Вместо этого мы можем исходя из вида неоднородности в правой части (7), которая собственно и определения характер функции $u_1$, просто положить равной нулю коэфициент при $\cos{(\tau+\beta)}$, поскольку именно это слагаемое ответственно за появление секулярного член при $u_1$.
+Для получения уравнения (8) позволяющего исключить секулярный член из выражения для $u_1$ нам нет необходимости строить в явном виде соответсвенное частное разложение(как показано выше).
+Вместо этого мы можем исходя из вида неоднородности в правой части (7), которая собственно и определения характер функции $u_1$, просто положить равной нулю коэфициент при $\cos{(\tau+\beta)}$, поскольку именно это слагаемое ответственно за появление секулярного члена при $u_1$.
 
-Подставим (5) и (9) в (3) и получим:
+Подстановка (5) и (9) в (3) даёт:
 
 $$u=\alpha\cos{(\tau+\beta)}+\frac{1}{32}\epsilon\alpha^2\cos{(3\tau+3\beta})+\ldots \eqno(11)$$
-
 Подставим $\omega_1$ из (10) в (4) получим:
-
 $$\omega=1+\frac{3}{8}\epsilon\alpha^2+\ldots \eqno(12)$$
-
 Так как $\tau=t\omega$, то (5) можно переписать  в виде:
-
 $$u=\alpha\cos{[(1+\frac{3}{8}\epsilon\alpha^2)t+\beta]}+\frac{1}{32}\epsilon\alpha^2\cos{3[(1+\frac{3}{8}\epsilon\alpha^2)t+3\beta]}+\ldots \eqno(13)$$
-
-Таким образом (13) будет равномерным решением 1го порядка, т.е. секулярные члены в нём отсутсвуют, а поправка (член $~\epsilon$) оказывается малой по сравнению с главным членом разложения.
+Таким образом, разложение (13) будет равномерным разложением первого порядка, поскольку секулярные члены в нём отсутсвуют, а поправка (член пропорциональный $\epsilon$) оказывается малой по сравнению с главным членом разложения.
 
 \end{document}
